--- a/sh/install
+++ b/sh/install
@@ -1,4 +1,5 @@
 #!/bin/bash
+
 set -euo pipefail
 
 IMAGE_NAME="maksimphono/console_animation"
@@ -35,12 +36,11 @@ else
 fi
 
 if [[ -f "$CONFIG_FILE_PATH" ]]; then
-    # The directory exists.
     echo "Found configuration file!"
 else
-    # The directory does not exist or it's a file.
     echo "Configuration file wasn't found, creating default file!"
     
+    touch "$CONFIG_FILE_PATH"
     echo $DEFAULT_CONFIGURATION_SETTINGS > "$CONFIG_FILE_PATH"
 
     if [[ -f "$CONFIG_FILE_PATH" ]]; then
@@ -66,8 +66,6 @@ else
         exit 1
     fi
 fi 
-
-STORAGE_PATH
 
 echo -e "\n"
 echo "--- Installation Complete ---"
