--- a/sh/install
+++ b/sh/install
@@ -18,7 +18,7 @@ if ! command -v docker &> /dev/null; then
     exit 1
 fi
 
-docker pull "${IMAGE_NAME}:${IMAGE_TAG}"
+#docker pull "${IMAGE_NAME}:${IMAGE_TAG}"
 
 echo -e "\n"
 if [ $? -eq 0 ]; then
@@ -60,7 +60,9 @@ else
         echo "Failed to create storage directory!"
         exit 1
     fi
-fi 
+fi
+
+ln -s "$(pwd)/main" /usr/local/bin/conanim
 
 echo -e "\n"
 echo "--- Installation Complete ---"
